Kico: fix some links, z-index of exclamation bubble and xhr with crednetials for cookie when CORS xhr

--- a/dynamic/home.css
+++ b/dynamic/home.css
@@ -84,7 +84,7 @@
     position: absolute;
     top: 4px;
     right: 4px;
-    z-index: 11;
+    z-index: 2;
     background: var(--main-attention-color);
     color: #fff;
     font-weight: bold;
